--- a/documentation.adoc
+++ b/documentation.adoc
@@ -12,9 +12,10 @@ To do: +
 - [ ] sinnvolle Speicherung der Abgaben in einem Bucket überlegen
 - [x] putObject-Methode überarbeiten: Hashmap - Edit: doch keine Hashmap
 - [ ] Ansicht für Jens
-- [ ] download Methode schreiben (für alle)
+- [x] download Methode schreiben (für alle)
 - [ ] Refactoring
 - [x] Dateieinschränkung nur für adoc
+- [ ] beim Hochladen der Datei: zeige an, wenn das Format falsch ist
 
 Erweiterungen:
 - [ ] Vorlage herunterladen
