change adoc to md for avoidung injection

--- a/documentation.adoc
+++ b/documentation.adoc
@@ -18,6 +18,7 @@ To do: +
 - [ ] beim Hochladen der Datei: zeige an, wenn das Format falsch ist
 
 Erweiterungen:
+- [ ] Inlineediting
 - [ ] Vorlage herunterladen
 
 
