--- a/documentation.adoc
+++ b/documentation.adoc
@@ -9,13 +9,13 @@ To do: +
 - [ ] Teste
 - [ ] in personalView: Abgabe der Zusammenfassungen mit upload logisch verbinden über eigenes Template
 - [ ] getMapping-Methode entfernen nach Entwickeln
-- [ ] sinnvolle Speicherung der Abgaben in einem Bucket überlegen
+- [x] sinnvolle Speicherung der Abgaben in einem Bucket überlegen
 - [x] putObject-Methode überarbeiten: Hashmap - Edit: doch keine Hashmap
 - [ ] Ansicht für Jens
 - [x] download Methode schreiben (für alle)
 - [ ] Refactoring
 - [x] Dateieinschränkung nur für adoc
-- [ ] beim Hochladen der Datei: zeige an, wenn das Format falsch ist
+- [x] beim Hochladen der Datei: zeige an, wenn das Format falsch ist
 
 Erweiterungen:
 - [ ] Inlineediting
