--- a/documentation.adoc
+++ b/documentation.adoc
@@ -17,8 +17,9 @@ To do: +
 - [x] Dateieinschränkung nur für adoc
 - [x] beim Hochladen der Datei: zeige an, wenn das Format falsch ist
 
-Erweiterungen:
-- [ ] Inlineediting
+Erweiterungen: +
+
+- [ ] Inlineediting +
 - [ ] Vorlage herunterladen
 
 
