add title of out project

--- a/documentation-arc42.adoc
+++ b/documentation-arc42.adoc
@@ -3,7 +3,7 @@
 //
 // ====================================
 
-= image:documentation/images/arc42-logo.png[arc42] Template
+= image:documentation/images/arc42-logo.png[arc42] Java in der Praxis: Selfservice
 // toc-title definition MUST follow document title without blank line!
 :toc-title: Inhaltsverzeichnis
 
