--- a/documentation/03_system_scope_and_context.adoc
+++ b/documentation/03_system_scope_and_context.adoc
@@ -52,12 +52,17 @@ Der Organisator kann außerdem die Abgaben extern veröffentlichen, sollte dies 
 
 ==== MOPS (Obersystem)
 
-MOPS ist das höhergestellte System zu dem unseren. Es stellt unserem System verschiedene MOPS Komponenten wie den Styleguide zur Verfügung.
+MOPS ist das höhergestellte System zu dem unseren. Es stellt unserem System verschiedene MOPS Komponenten wie den Styleguide und Keycloak
+zur Verfügung.
 
 ==== meetup.com (Fremdsystem)
 
 Die Events die in unserem System angezeigt werden, werden von meetup.com abgerufen. Dort werden diese Events von Organisatoren unabhängig
 von unserem System erstellt. Diese Organisatoren können die gleichen wie in unserem System sein, müssen es aber nicht.
+
+==== MinIO (Fremdsystem)
+
+Die Zusammenfassungen werden bei der Abgabe auf einem MinIO Server gespeichert.
 
 === Technischer Kontext
 
@@ -76,8 +81,24 @@ Insbesondere bei der Entwicklung von Infrastruktur oder Hardware sind diese tech
 Beispielsweise UML Deployment-Diagramme mit den Kanälen zu Nachbarsystemen, begleitet von einer Tabelle, die Kanäle auf Ein-/Ausgaben abbildet.
 ****
 
-**<Diagramm oder Tabelle>**
+image:03_technischer_kontext.png["Technischer Kontext"]
 
-**<optional: Erläuterung der externen technischen Schnittstellen>**
+==== Frontend
+
+Die Anbindung der Nutzer an unser System erfolgt durch ein graphisches Frontend in Form einer Homepage mit verschiedenen Seiten, die über
+einen beliebigen Internetbrowser aufgerufen werden können. Das Frontend wird zwar von uns mit entwickelt, implementiert jedoch
+den MOPS-Styleguide, der nicht von uns entwickelt wird. Außerdem wird für den Login über unser Frontend der Keycloak Fremddienst verwendet.
+
+==== meetup.com
+
+Die Event Daten von meetup.com werden über eine JSON-API von meetup.com abgerufen. Dabei wird offensichtlich nur lesend auf meetup.com
+zugegriffen.
+
+==== MinIO
+
+Die Abgaben werden in Form von Text Dateien auf einem externen MinIO Server gespeichert, dazu werden diese mit Hilfe von passenden
+Bibliotheken übertragen. Der Zugriff auf MinIO geht dabei lesend und schreibend, da auch Inhalte aus den Dateien bei uns angezeigt
+werden können.
 
 **<Mapping fachliche auf technische Schnittstellen>**
+todo?
