add diagram for our system + source file to edit it if wished

--- a/documentation/05_building_block_view.adoc
+++ b/documentation/05_building_block_view.adoc
@@ -67,7 +67,7 @@ Im schlimmsten Fall müssen Sie Syntax, Semantik, Protokolle, Fehlerverhalten, R
 Im besten Fall kommen Sie mit Beispielen oder einfachen Signaturen zurecht.
 ****
 
-_**<Übersichtsdiagramm>**_
+image:05_gesamtsystem.png["Diagramm Gesamtsystem"]
 
 Begründung:: _<Erläuternder Text>_
 
